# jsonparser

./: jsonparser.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/a59f1d52/: cabal_macros.h
exe/: .Main.hs.swp  Main.hs
