name:                jsonparser
version:             0.1.0.0
-- synopsis:
-- description:
--homepage:            https://github.com/githubuser/jsonparser#readme
license:             BSD3
license-file:        LICENSE
author:              MonadMania
maintainer:          example@example.com
copyright:           2019 Casey Coleman
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable jsonparser
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
